fixed layout issue with main section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -207,14 +207,13 @@ nav {
   grid-column: 2 / -1;
   grid-row: 2 / -1;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr minmax(100px, 20vw);
   max-width: 100%;
   gap: 20px;
 }
 
 .projects {
-  grid-column: 1/ 3;
+  grid-column: 1/ 2;
   grid-row: span 2;
 }
 
@@ -228,7 +227,7 @@ nav {
 
 .project-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
   padding: 20px;
   gap: 30px;
 }
